test/files/neg/t4818.check
t4818.scala:4: error: type mismatch;
 found   : 5.type (with underlying type Int)
 required: Nothing
	def f(x: Any) = x match { case Fn(f) => f(5) }
                                                  ^
one error found
